comparacion entre arrays 1

--- a/NumPy.ipynb
+++ b/NumPy.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1Lqb8J_Z59L9PiCbTdpXiNUZRoFPJWDQj",
-      "authorship_tag": "ABX9TyP2+O4yJcAJ+nmMXqvzUIWs",
+      "authorship_tag": "ABX9TyMPjhyNcrH3pfp7Vn/HoEZb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1280,6 +1280,68 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Comparacion entre ***Arrays***"
+      ],
+      "metadata": {
+        "id": "N807eXVp6v6h"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "tenemos nuestro array de Moscú, que muestra el comportamiento del precio de las manzanas durante un período de 87 meses."
+      ],
+      "metadata": {
+        "id": "5wdoMCnH6uNB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "moscu.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AUyH9VKY64Cw",
+        "outputId": "3df6d9b1-4d6f-48a5-d6b1-c3c35de62434"
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(87,)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 48
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " Si aplicamos el método .shape, muestra que es un array unidimensional, es decir, un vector que tiene 87 ocurrencias."
+      ],
+      "metadata": {
+        "id": "Y3J9WFKB7H2p"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "R7Vykv817Gio"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
