--- a/NumPy.ipynb
+++ b/NumPy.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1Lqb8J_Z59L9PiCbTdpXiNUZRoFPJWDQj",
-      "authorship_tag": "ABX9TyO3WZBm0oxHHXYzh4n5uWmX",
+      "authorship_tag": "ABX9TyP0zK8gNF4O6jc4EWv9zCAa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3917,20 +3917,470 @@
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [],
+      "cell_type": "code",
+      "source": [
+        "np.random.uniform(0.1,0.9,5)"
+      ],
       "metadata": {
-        "id": "6IQWD-qBrGIY"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c29d59de-eb66-4dc6-c583-7d474fd5fb10",
+        "id": "TBFU3UoZw-IJ"
+      },
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.55249394, 0.338098  , 0.13735658, 0.89250192, 0.10546059])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 78
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.random.uniform(0.1,0.9,5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uu8ah0eZxD6E",
+        "outputId": "7571a6c1-ab48-4a59-ae2f-9180a29b5a03"
+      },
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.71583442, 0.69741368, 0.40195115, 0.49531796, 0.84315871])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 79
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.random.uniform(0.1,0.9,5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IPRTfycPxFvl",
+        "outputId": "e3e0ad30-0ce6-42df-888e-1be39cca791c"
+      },
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.41636324, 0.87916504, 0.51953177, 0.17489047, 0.75064673])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 80
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Cuando generamos números aleatorios utilizando el módulo random de NumPy (Biblioteca de Python), lo que realmente estamos haciendo es generar números **pseudoaleatorios**, es decir, números que parecen ser aleatorios, pero no son totalmente aleatorios, porque estamos utilizando un algoritmo preestablecido que sigue una lógica para generar números que parecen ser aleatorios. Y este algoritmo depende de una ***semilla*** que es un número entero que le indicamos al algoritmo, lo cual hará que este algoritmo, **dé una salida específica** que parece ser aleatoria siempre que se ejecute con ese número de semilla, que es lo que se denomina ***random state (estado de aleatoriedad)*** , ¿Por qué es importante este concepto? Porque ***muchas veces necesitamos reproducir los mismos números que estamos generando de forma aleatoria, especialmente cuando estamos modelando con nuestros datos.*** Entonces, es importante conocer este concepto, y en NumPy, ¿cómo establecemos este estado de aleatoriedad? ***np.random.seed,***  Y podemos poner un número, por ejemplo, el 99"
+      ],
+      "metadata": {
+        "id": "WLSmzO8GvT__"
       }
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "np.random.seed(99)\n",
+        "np.random.uniform(0.1,0.9,5)"
+      ],
       "metadata": {
-        "id": "l0QeDl8cpM3S"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-N4X5HcJwX13",
+        "outputId": "86379636-039b-495c-eac2-fcbd42a308a1"
       },
-      "execution_count": null,
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.63782285, 0.49046272, 0.76039614, 0.12515711, 0.74643997])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 76
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.random.seed(99)\n",
+        "np.random.uniform(0.1,0.9,5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6b2cc6fb-0ac7-4fea-e80d-d8220edb7dc2",
+        "id": "0lfw6-M3w2-P"
+      },
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.63782285, 0.49046272, 0.76039614, 0.12515711, 0.74643997])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 77
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.random.seed(99)\n",
+        "np.random.uniform(0.1,0.9,5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mvxYkeXYxM_f",
+        "outputId": "72b8c13d-665c-423c-f355-10590359b5a1"
+      },
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.63782285, 0.49046272, 0.76039614, 0.12515711, 0.74643997])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 81
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " la forma de garantizar que esto no cambie que se ejecute en la misma celda, Es establecer una semilla, y luego sí, ejecutar, y verás que el estado de aleatoriedad siempre será el mismo."
+      ],
+      "metadata": {
+        "id": "C7GqK7jeyN41"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Esto es muy importante tener en cuenta, porque cuando trabajamos con NumPy, generalmente la persona se olvida de establecer un estado de aleatoriedad, y si desea poder reproducir los mismos datos, con el objetivo de hacer un experimento, entonces es importante recordar usar un Random Seed (Semilla Aleatoria),"
+      ],
+      "metadata": {
+        "id": "9W77E3sgy7nu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.random.seed(99)\n",
+        "norma=np.array([])\n",
+        "for i in range(100):\n",
+        "  norma=np.append(norma,np.linalg.norm(moscu-(pendientes[i]* x + b)))"
+      ],
+      "metadata": {
+        "id": "oDgGNt9eztAt"
+      },
+      "execution_count": 82,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "norma"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Nie9Tb4yz-XS",
+        "outputId": "9f26743d-8f76-4313-b3a8-240833c6239a"
+      },
+      "execution_count": 83,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([162.73218086, 163.0855742 , 102.0428243 , 166.91394117,\n",
+              "       132.78492379, 126.25324051, 168.27145275, 149.26711466,\n",
+              "       112.48070795, 109.95637935, 205.80258099, 103.95917187,\n",
+              "       107.46492995, 129.28348938, 104.57379101, 239.54560854,\n",
+              "       140.66481474, 239.91319584, 147.71197545, 168.34640792,\n",
+              "       206.24933439, 114.8438967 , 107.50585391, 171.8786903 ,\n",
+              "       176.72947895, 191.08929559, 235.00358881, 166.91980289,\n",
+              "       145.76403713, 180.95514859, 225.28974213, 120.78534599,\n",
+              "       150.43273616, 102.73854457, 169.9860825 , 114.44414753,\n",
+              "       104.94363833, 119.38685423, 102.84600064, 101.96538632,\n",
+              "       154.13304996, 123.14142656, 127.68164728, 131.83453471,\n",
+              "       101.98722024, 103.30670418, 202.45941382, 136.41395981,\n",
+              "       105.60245433, 205.41095254, 120.44463075, 108.48358418,\n",
+              "       177.19477941, 131.89066875, 190.86512061, 101.81178024,\n",
+              "       203.92872709, 241.79007354, 105.10495661, 102.3716709 ,\n",
+              "       163.75279784, 205.8640377 , 101.85031204, 114.06799378,\n",
+              "       102.30917462, 206.64904662, 144.76849156, 185.6800508 ,\n",
+              "       104.73944807, 130.73373352, 109.4472739 , 170.84448993,\n",
+              "       175.06047674, 128.95747878, 204.54504858, 104.90006599,\n",
+              "       109.82494776, 178.71719988, 105.27289078, 232.78183171,\n",
+              "       108.39653851, 121.95875287, 203.17322052, 137.82638323,\n",
+              "       117.06727314, 166.04108215, 130.88574106, 188.91200564,\n",
+              "       140.91182221, 156.27498666, 176.80916841, 207.15021179,\n",
+              "       162.36910058, 151.81828078, 163.92523648, 206.42019438,\n",
+              "       102.70800835, 120.88652202, 149.31105524, 125.07753907])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 83
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Entonces, puedes observar aquí que, efectivamente, al establecer un estado de aleatoriedad, siempre podré reproducir mis resultados,"
+      ],
+      "metadata": {
+        "id": "KrAR4NvxzrOL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "norma"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nDeMl8Cs0N7w",
+        "outputId": "b3bc0e70-5654-457f-c2ad-4e7ac645268d"
+      },
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([162.73218086, 163.0855742 , 102.0428243 , 166.91394117,\n",
+              "       132.78492379, 126.25324051, 168.27145275, 149.26711466,\n",
+              "       112.48070795, 109.95637935, 205.80258099, 103.95917187,\n",
+              "       107.46492995, 129.28348938, 104.57379101, 239.54560854,\n",
+              "       140.66481474, 239.91319584, 147.71197545, 168.34640792,\n",
+              "       206.24933439, 114.8438967 , 107.50585391, 171.8786903 ,\n",
+              "       176.72947895, 191.08929559, 235.00358881, 166.91980289,\n",
+              "       145.76403713, 180.95514859, 225.28974213, 120.78534599,\n",
+              "       150.43273616, 102.73854457, 169.9860825 , 114.44414753,\n",
+              "       104.94363833, 119.38685423, 102.84600064, 101.96538632,\n",
+              "       154.13304996, 123.14142656, 127.68164728, 131.83453471,\n",
+              "       101.98722024, 103.30670418, 202.45941382, 136.41395981,\n",
+              "       105.60245433, 205.41095254, 120.44463075, 108.48358418,\n",
+              "       177.19477941, 131.89066875, 190.86512061, 101.81178024,\n",
+              "       203.92872709, 241.79007354, 105.10495661, 102.3716709 ,\n",
+              "       163.75279784, 205.8640377 , 101.85031204, 114.06799378,\n",
+              "       102.30917462, 206.64904662, 144.76849156, 185.6800508 ,\n",
+              "       104.73944807, 130.73373352, 109.4472739 , 170.84448993,\n",
+              "       175.06047674, 128.95747878, 204.54504858, 104.90006599,\n",
+              "       109.82494776, 178.71719988, 105.27289078, 232.78183171,\n",
+              "       108.39653851, 121.95875287, 203.17322052, 137.82638323,\n",
+              "       117.06727314, 166.04108215, 130.88574106, 188.91200564,\n",
+              "       140.91182221, 156.27498666, 176.80916841, 207.15021179,\n",
+              "       162.36910058, 151.81828078, 163.92523648, 206.42019438,\n",
+              "       102.70800835, 120.88652202, 149.31105524, 125.07753907])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 84
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Entonces, hasta el momento, ya sabemos cómo crear nuestros Arrays, pero ¿cómo hacemos entonces, por ejemplo, para unir varios Arrays y crear una estructura similar a lo que podríamos llamar una tabla para exportarla y para tenerla a disposición para futuros experimentos"
+      ],
+      "metadata": {
+        "id": "Q9NXGQPj0dPe"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Los mismos valores\n",
+        "\n",
+        "\n",
+        "\n",
+        "Micaela quería generar dos secuencias de números aleatorios diferentes entre 0 y 5 en su código. Supongamos que ella escribió lo siguiente:\n",
+        "\n",
+        "import numpy as np\n",
+        "\n",
+        "np.random.seed(42)\n",
+        "\n",
+        "a = np.random.uniform(0, 1, 5)\n",
+        "\n",
+        "np.random.seed(42)\n",
+        "\n",
+        "b = np.random.uniform(0, 1, 5)\n",
+        "\n",
+        ".....\n",
+        "\n",
+        "\n",
+        "¿Qué problemas está experimentando con este código?\n",
+        "\n",
+        "\n",
+        "La secuencia de código generará 5 números entre 0 y 1. Además, seed(42) hará que ambas secuencias sean iguales.\n",
+        "\n",
+        "\n",
+        "La elección del primer valor dentro de random.uniform es el primer valor posible en la secuencia, el segundo valor es el último valor posible y el último valor es el número de valores en la secuencia. Además, colocar random.seed con el mismo número justo antes de la llamada a la función hará que se genere la misma secuencia. Un ejemplo de código que resolvería el problema correctamente es este, observe que se generarán secuencias de 5 números:\n",
+        "\n",
+        "import numpy as np\n",
+        "\n",
+        "np.random.seed(42)\n",
+        "\n",
+        "a = np.random.uniform(0, 5, 5)\n",
+        "\n",
+        "np.random.seed(8)\n",
+        "\n",
+        "b = np.random.uniform(0, 5, 5)"
+      ],
+      "metadata": {
+        "id": "wmL_FbXi1Cer"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pendientes"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ScUUhzamy67D",
+        "outputId": "9bbecdce-a925-4524-e6ef-b3ca1c6d25fa"
+      },
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.16652752, 0.70483461, 0.4202207 , 0.15527471, 0.61562825,\n",
+              "       0.27716245, 0.71874586, 0.2041775 , 0.53645468, 0.52316523,\n",
+              "       0.81371172, 0.39056648, 0.50808319, 0.60385635, 0.38454332,\n",
+              "       0.89407728, 0.64063625, 0.89493647, 0.66170623, 0.71894504,\n",
+              "       0.81479915, 0.54770929, 0.36205127, 0.1421289 , 0.12948199,\n",
+              "       0.77742752, 0.88343629, 0.71514518, 0.65598255, 0.11860534,\n",
+              "       0.86051436, 0.57277887, 0.20081611, 0.4645699 , 0.7232896 ,\n",
+              "       0.32453418, 0.38122682, 0.5671991 , 0.46620853, 0.42280473,\n",
+              "       0.19028627, 0.58183459, 0.27210427, 0.25792455, 0.44837928,\n",
+              "       0.47244085, 0.80554948, 0.24303406, 0.37575028, 0.81275784,\n",
+              "       0.29896964, 0.35584995, 0.74212603, 0.61266658, 0.77686683,\n",
+              "       0.43887892, 0.80914222, 0.899319  , 0.37983897, 0.45812542,\n",
+              "       0.1637647 , 0.81386135, 0.44217793, 0.3262872 , 0.41356437,\n",
+              "       0.81577143, 0.65302936, 0.76382245, 0.48737103, 0.60879059,\n",
+              "       0.35012988, 0.14484956, 0.73659128, 0.26766936, 0.81064667,\n",
+              "       0.38160747, 0.34797743, 0.7460539 , 0.37842805, 0.87821405,\n",
+              "       0.51401979, 0.57733918, 0.80729595, 0.63183172, 0.31286251,\n",
+              "       0.15760914, 0.26110143, 0.77197061, 0.64139294, 0.68612297,\n",
+              "       0.12927572, 0.81698964, 0.70289118, 0.67355528, 0.16329898,\n",
+              "       0.81521483, 0.46408761, 0.57317626, 0.20405037, 0.28140599])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 85
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "norma"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kZ_80uMj172a",
+        "outputId": "b7821fd5-3540-43f4-aa8e-adc21a6f04b4"
+      },
+      "execution_count": 87,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([162.73218086, 163.0855742 , 102.0428243 , 166.91394117,\n",
+              "       132.78492379, 126.25324051, 168.27145275, 149.26711466,\n",
+              "       112.48070795, 109.95637935, 205.80258099, 103.95917187,\n",
+              "       107.46492995, 129.28348938, 104.57379101, 239.54560854,\n",
+              "       140.66481474, 239.91319584, 147.71197545, 168.34640792,\n",
+              "       206.24933439, 114.8438967 , 107.50585391, 171.8786903 ,\n",
+              "       176.72947895, 191.08929559, 235.00358881, 166.91980289,\n",
+              "       145.76403713, 180.95514859, 225.28974213, 120.78534599,\n",
+              "       150.43273616, 102.73854457, 169.9860825 , 114.44414753,\n",
+              "       104.94363833, 119.38685423, 102.84600064, 101.96538632,\n",
+              "       154.13304996, 123.14142656, 127.68164728, 131.83453471,\n",
+              "       101.98722024, 103.30670418, 202.45941382, 136.41395981,\n",
+              "       105.60245433, 205.41095254, 120.44463075, 108.48358418,\n",
+              "       177.19477941, 131.89066875, 190.86512061, 101.81178024,\n",
+              "       203.92872709, 241.79007354, 105.10495661, 102.3716709 ,\n",
+              "       163.75279784, 205.8640377 , 101.85031204, 114.06799378,\n",
+              "       102.30917462, 206.64904662, 144.76849156, 185.6800508 ,\n",
+              "       104.73944807, 130.73373352, 109.4472739 , 170.84448993,\n",
+              "       175.06047674, 128.95747878, 204.54504858, 104.90006599,\n",
+              "       109.82494776, 178.71719988, 105.27289078, 232.78183171,\n",
+              "       108.39653851, 121.95875287, 203.17322052, 137.82638323,\n",
+              "       117.06727314, 166.04108215, 130.88574106, 188.91200564,\n",
+              "       140.91182221, 156.27498666, 176.80916841, 207.15021179,\n",
+              "       162.36910058, 151.81828078, 163.92523648, 206.42019438,\n",
+              "       102.70800835, 120.88652202, 149.31105524, 125.07753907])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 87
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "ya sabemos cómo crear nuestros Arrays, pero ¿cómo hacemos entonces, por ejemplo, para unir varios Arrays y crear una estructura similar a lo que podríamos llamar una tabla para exportarla y para tenerla a disposición para futuros experimentos,"
+      ],
+      "metadata": {
+        "id": "bFyfc7nW3-XI"
+      }
     }
   ]
 }
